--- a/.gitignore
+++ b/.gitignore
@@ -308,3 +308,6 @@ TSWLatexianTemp*
 .venv/*
 **.DS_Store
 paper_orig/**
+data/irreversible/alglib_irreversibility_constraint_nucleation_Vspace/output_files_disp_elastic/disp_349.txt
+
+data/**
