--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,4 @@ paper_orig/**
 data/irreversible/alglib_irreversibility_constraint_nucleation_Vspace/output_files_disp_elastic/disp_349.txt
 
 data/**
+**.pyc
